--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Jost, sans-serif;
+    outline: none;
 }
 
 html,
@@ -51,16 +52,15 @@ input[type=search] {
     color: var(--text-color);
     border: transparent;
     font-weight: 400;
-    outline: none;
 }
 
 input[type=search]:hover,
 input[type=search]:active,
-input[type=search]:focus{
+input[type=search]:focus {
     box-shadow: var(--box-shadow-small);
 }
 
-select{
+select {
     font-size: 1rem;
     color: var(--text-color);
     border: transparent;
@@ -73,23 +73,26 @@ select{
 }
 
 option:checked,
-option:hover{
+option:hover {
     background-color: rgba(183, 118, 0, 0.5);
 }
 
-option[value="4"]{
+option[value="4"] {
     border-radius: 1rem 1rem 0 0;
     padding: 0.5rem;
 }
-option[value="3"]{
+
+option[value="3"] {
     border-radius: 0rem;
     padding: 0.5rem;
 }
-option[value="2"]{
+
+option[value="2"] {
     border-radius: 0rem;
     padding: 0.5rem;
 }
-option[value="1"]{
+
+option[value="1"] {
     padding: 0.5rem;
     border-radius: 0 0 1rem 1rem;
 }
@@ -97,6 +100,10 @@ option[value="1"]{
 .separate {
     display: flex;
     flex-direction: row;
+}
+
+.down {
+    transform: translateY(7rem);
 }
 
 /*----------text-settings------------*/
@@ -145,16 +152,21 @@ option[value="1"]{
     justify-content: space-between;
     align-items: center;
     min-height: 6rem;
-    filter: drop-shadow(0px 1.0625rem 10px rgba(0, 0, 0, 0.14));
+    filter: drop-shadow(0 1rem 10px rgba(0, 0, 0, 0.14));
     border-radius: 0 0 1.5rem 1.5rem;
     background: var(--header-background-color);
 }
 
-
 .header-right-side {
     display: flex;
     gap: 4rem;
+    align-items: center;
     margin-right: 2.5rem;
+}
+
+.header-search-bar {
+    display: flex;
+    flex: 0;
 }
 
 .logo-icon-header {
@@ -168,7 +180,14 @@ option[value="1"]{
 }
 
 .header-left-side {
+    display: flex;
+    gap: 4rem;
+    align-items: center;
     margin-left: 2.5rem;
+}
+
+.header-left-side p{
+    color: #996016;
 }
 
 .logo-mp {
@@ -177,8 +196,8 @@ option[value="1"]{
     gap: 1rem;
 }
 
-.bin-header,
-.avatar-header {
+.header-bin,
+.header-avatar {
     text-align: center;
 }
 
@@ -250,7 +269,6 @@ option[value="1"]{
     background-clip: padding-box;
     border-radius: 2rem;
     box-shadow: var(--box-shadow-big);
-    outline: 0;
 }
 
 .modal-content {
@@ -333,7 +351,6 @@ option[value="1"]{
     padding-right: 1rem;
     margin-top: 0.5rem;
     background-color: transparent;
-    outline: none;
     font-size: 1rem;
     min-width: 5rem;
     min-height: 2.5rem;
@@ -345,8 +362,6 @@ option[value="1"]{
 .modal-nav input:focus,
 .card-authreg-nav input:focus,
 .create-form-nav input:focus {
-    outline-offset: 0px;
-    outline: none;
     box-shadow: var(--box-shadow-big);
     transform: scale(105%);
 }
@@ -498,63 +513,29 @@ option[value="1"]{
     border-radius: 2.1875rem;
 }
 
-.gpu {
-    background-image: url("../../images/gpu-placeholder.webp");
-    background-size: 50%;
-}
-
-.mb {
-    background: url("../../images/mb-placeholder.webp");
-    background-size: 55%;
-}
-
-.cpu {
-    background: url("../../images/cpu-placeholder.webp");
+.cpu, .ram {
     background-size: 65%;
 }
 
-.ram {
-    background: url("../../images/ram-placeholder.webp");
-    background-size: 70%;
-}
-
-.psu {
-    background: url("../../images/psu-placeholder.webp");
-    background-size: 45%;
-}
-
-.ssd {
-    background: url("../../images/ssd-placeholder.webp");
-    background-size: 80%;
-}
-
-.cool {
-    background: url("../../images/cool-placeholder.webp");
-    background-size: 45%;
-}
-
+.gpu,
+.psu,
+.cool,
 .case {
-    background: url("../../images/case-placeholder.webp");
     background-size: 45%;
 }
 
-.monitor {
-    background: url("../../images/monitor-placeholder.webp");
-    background-size: 55%;
-}
-
+.ssd,
 .kb {
-    background: url("../../images/kb-placeholder.webp");
     background-size: 80%;
 }
 
+.mb,
+.monitor,
 .mouse {
-    background: url("../../images/mouse-placeholder.webp");
     background-size: 55%;
 }
 
 .premades {
-    background: url("../../images/premades-placeholder.webp");
     background-size: 60%;
 }
 
@@ -694,12 +675,11 @@ option[value="1"]{
 
 .card-authreg-nav label,
 .create-form-nav label {
-    text-align: left;
+    text-align: center;
 }
 
 .card-authreg-nav input,
 .card-authreg-nav input {
-    outline: none;
     font-size: 1.5rem;
     max-width: 25rem;
     max-height: 3rem;
@@ -723,9 +703,10 @@ label {
     align-content: center;
 }
 
-.card, .card-lk{
+.card,
+.card-lk {
     max-width: 65rem;
-    max-height: 40rem;
+    min-width: 40rem;
     padding: 5rem 7.5rem 10rem 7.5rem;
     /*верх-право-низ-лево*/
     border-radius: 2.1875rem;
@@ -762,6 +743,7 @@ label {
 
 .info {
     display: flex;
+    flex-direction: row;
     padding-top: 7.25rem;
     padding-bottom: 3.25rem;
     justify-content: space-between;
@@ -769,8 +751,34 @@ label {
     font-size: 2rem;
 }
 
-.info-right-side {
+.info-right-side, .info-left-side {
+    display: flex;
+    flex-direction: column;
+}
+
+.info-left-side{
+    text-align: start;
+    gap: 2rem;
+}
+
+.info-right-side{
     text-align: end;
+    gap: 1.5rem;
+}
+
+.info-right-side > input::placeholder{
+    text-align: end;
+    color: var(--text-color);
+}
+
+.info-right-side > input{
+    border-radius: 1rem;
+    border: transparent;
+    padding: 1rem;
+}
+
+.info-right-side > input:hover{
+    box-shadow: var(--box-shadow-small);
 }
 
 .avatar-icon-lk {
@@ -779,24 +787,9 @@ label {
     filter: hue-rotate(180deg) brightness(125%);
 }
 
-/* ---------------------Bin----------------------- */
-
-.bin {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 2.5rem;
-}
-
-.bin-icon {
-    max-width: 9.375rem;
-    max-height: 9.375rem;
-}
-
 /* ---------------------CRUD Panels----------------------- */
 
-.main-content-nav .buttons{
+.main-content-nav .buttons {
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
@@ -804,11 +797,7 @@ label {
     gap: 1rem;
 }
 
-.buttons{
-    transform:translateY(2rem);
-}
-
-.button{
+.button {
     font-size: 1.25rem;
     color: var(--text-color);
     background-color: var(--background-color);
@@ -820,31 +809,32 @@ label {
 
 /* --------------------Пагинация-------------------- */
 
-.pagination > li > a, .pagination > li > span { 
+.pagination>li>a,
+.pagination>li>span {
     color: var(--text-color);
     font-size: 1.25rem;
     padding: .4rem 1rem;
 }
 
 
-.pagination > .active > a,
-.pagination > .active > a:focus,
-.pagination > .active > a:hover,
-.pagination > .active > span,
-.pagination > .active > span:focus,
-.pagination > .active > span:hover, 
-.pagination > .disabled > a ,
-.pagination > .disabled > li > span ,
-.pagination > .disabled > a:focus,
-.pagination > .disabled > a:hover,
-.pagination > .disabled > li > span:focus,
-.pagination > .disabled > li > span:hover{ 
+.pagination>.active>a,
+.pagination>.active>a:focus,
+.pagination>.active>a:hover,
+.pagination>.active>span,
+.pagination>.active>span:focus,
+.pagination>.active>span:hover,
+.pagination>.disabled>a,
+.pagination>.disabled>li>span,
+.pagination>.disabled>a:focus,
+.pagination>.disabled>a:hover,
+.pagination>.disabled>li>span:focus,
+.pagination>.disabled>li>span:hover {
     background-color: var(--text-color);
     border-color: var(--text-color);
     color: white;
 }
 
-.pagination-container{
+.pagination-container {
     display: flex;
     transform: translateY(-5rem);
     flex-direction: column wrap;
@@ -853,19 +843,22 @@ label {
 
 /* ----------------------------Catalogue------------------------------  */
 
-.catalogue-sections{
-    display:flex;
-    gap: 5rem;
+.catalogue-sections {
+    display: flex;
     margin: 3rem;
     height: min(90%, 30rem);
     justify-content: center;
 }
 
-.catalogue-bin{
-    justify-content: end;
+.catalogue-filters{
+    display: flex;
+    flex-direction: column;
+    background-color: #ececec;
+    gap: 1rem;
+    align-items: center;
 }
 
-.filters{
+.filters {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -874,14 +867,37 @@ label {
     box-shadow: var(--box-shadow-big);
     width: min(90%, 20rem);
     max-height: 50rem;
-    border-radius: 2.1875rem;
+    border-radius: 1rem 1rem 2.1875rem 2.1875rem;
     gap: 1rem;
 }
 
-.filter-options{
+.search-bar {
+    display: flex;
+    flex: 0;
+    background-color: #ececec;
+    box-shadow: var(--box-shadow-big);
+    border-radius: 2.1875rem 2.1875rem 1rem 1rem;
+    width: min(90%, 20rem);
+    padding: 1rem;
+}
+
+.search-bar>input[type="search"] {
+    margin-right: 1rem;
+}
+
+.search-bar>.button {
+    box-shadow: none;
+}
+
+.search-bar>.button:hover {
+    box-shadow: var(--box-shadow-small);
+}
+
+.filter-options {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    padding: 2rem;
     text-align: center;
     border-radius: 1rem;
     background-color: var(--background-color);
@@ -889,11 +905,22 @@ label {
     color: var(--text-color);
 }
 
-.filter-options > label{
-    margin-bottom: 1rem;
+.filter-options input[type="number"]{
+    border-radius: 1rem;
+    padding: 0.5rem  0.5rem  0.5rem 1rem;
+    border: none;
+    color: var(--text-color);
 }
 
-.catalogue{
+.filter-options input[type="number"]:hover,
+.filter-options input[type="number"]:focus{
+    border: none;
+    box-shadow: var(--box-shadow-small);
+}
+
+.catalogue-products {
+    display: flex;
+    flex-direction: column;
     width: min(90%, 85rem);
     padding: 4rem;
     border-radius: 2.1875rem;
@@ -901,40 +928,43 @@ label {
     background-color: #ececec;
 }
 
-.catalogue-container{
+.catalogue-container {
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     gap: 3rem;
 }
 
-.catalogue-items{
+.catalogue-items {
     box-shadow: var(--box-shadow-small);
     border-radius: 1rem;
     padding: 2rem;
     background-color: var(--background-color);
 }
 
-.catalogue-items img{
+.catalogue-items img {
     border-radius: 2rem;
-    background-color: white;
-    padding: 2rem;
+    scale: 0.5;
 }
 
-.catalogue-item-container{
+.catalogue-item-container {
     justify-content: space-between;
     gap: 3rem;
 }
 
-.catalogue-items > h2,
-.catalogue-items > article,
-.catalogue-info > h1,
-.catalogue-info > p
- {
-    color:var(--text-color);
+.catalogue-items>h2,
+.catalogue-items>article,
+.catalogue-info>h1,
+.catalogue-info>p {
+    color: var(--text-color);
 }
 
-.catalogue-info{
+.catalogue-bin {
+    justify-content: end;
+}
+
+
+.catalogue-info {
     margin: 10rem;
     padding: 5rem;
     border-radius: 2.1875rem;
@@ -942,7 +972,7 @@ label {
     box-shadow: var(--box-shadow-big);
 }
 
-.catalogue-items-text{
+.catalogue-items-text {
     display: flex;
     flex-direction: column;
     flex: 1;
@@ -950,7 +980,7 @@ label {
     padding: 0 1rem;
 }
 
-.catalogue-info img{
+.catalogue-info img {
     border-radius: 2rem;
     background-color: white;
     padding: 2rem;
@@ -962,31 +992,67 @@ label {
 
 /* -----------------------Bin--------------------- */
 
-.bin-container{
-    display:flex;
-    width: min(90%, 70rem);
+.bin-container {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.bin{
-    flex: 1;
+.bin {
+    display: flex;
+    flex-direction: column;
+    width: min(90%, 70rem);
+    padding: 2rem 5rem;
     background-color: var(--background-color);
     box-shadow: var(--box-shadow-big);
     border-radius: 2.1875rem;
 }
 
+.bin-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.bin-content{
+    display: flex;
+    flex-direction: column;
+    gap: 0.125rem;
+    border-radius: 2.1875rem;
+    border: none;
+    box-shadow: var(--box-shadow-small);
+}
+
+.bin-info{
+    display: flex;
+    flex-direction: column;
+}
+
+.bin-item{
+    display: flex;
+    flex-direction: row;
+    padding: 2rem;
+}
+
 /* --------------mediocres------------------ */
 
 
-@media (max-width: 60em){
-    .header{
+@media (max-width: 60em) {
+    .header {
         flex-direction: column;
         gap: 2rem;
         padding: 1.5rem;
     }
 
-    .catalogue-sections{
+    .catalogue-sections {
         flex-direction: column;
+        gap: 3rem;
+        align-items: center;
+    }
+
+    .catalogue-filters{
+        align-items: center;
     }
 }
